Bug fix: Fixed initial wrong height on option elems
Setting font-weight to 400 for select elems prevents option elems from
being the wrong height the first time they are viewed. Not sure why
this happens, but it does; it seems to be related to using a custom
font. It's possible this is a chrome only issue.

--- a/styles/default.css
+++ b/styles/default.css
@@ -118,9 +118,9 @@ select {
   border-style: none;
   text-align: center;
   padding: 0.4em;
+  font-weight: 400;
+  color: #333333;
 }
-
-
 
 span {
   background-color: #949494;
